<resources>
    <string name="app_name">HustlersHub</string>
    <string name="student">STUDENT</string>
    <string name="staff">STAFF</string>
    <string name="staff_details">STAFF DETAILS</string>
    <string name="staff_name">NAME</string>
    <string name="staff_age">AGE</string>
    <string name="staff_gender">GENDER</string>
    <string name="staff_qualification">QUALIFICATION</string>
    <string name="staff_area">AREA</string>
    <string name="staff_workStatus">WORKING STATUS</string>
    <string name="staff_phone">PHONE</string>
    <string name="staff_email">EMAIL</string>
    <string name="staff_standard">SUBJECT AND STANDARD</string>
    <string name="staff_maths">MATHS</string>
    <string name="staff_science">SCIENCE</string>
    <string name="staff_social">SOCIAL</string>
    <string name="staff_english">ENGLISH</string>
    <string name="staff_tamil">TAMIL</string>
    <string name="staff_hindi">HINDI</string>
    <string name="staff_french">FRENCH</string>
    <string name="staff_sub1">ALL SUB 1 TO 8</string>
    <string name="staff_sub2">ALL SUB 9 AND 10</string>
    <string name="staff_sub3">MATHS 10</string>
    <string name="staff_sub4">SCIENCE 10</string>
    <string name="staff_sub5">MATHS 11 AND 12</string>
    <string name="staff_sub6">PHYSICS 11 AND 12</string>
    <string name="staff_sub7">CHEMISTRY 11 AND 12</string>
    <string name="staff_pref.timings">PREFERRED TIMINGS</string>
    <string name="staff_time1">5PM - 7PM</string>
    <string name="staff_time2">6PM - 8PM</string>
    <string name="staff_time3">5:30PM - 7:30PM</string>
    <string name="staff_workday">WORKING DAYS</string>
    <string name="staff_day1">2 DAYS/WEEK</string>
    <string name="staff_day2">3 DAYS/WEEK</string>
    <string name="staff_day3">5 DAYS/WEEK</string>
    <string name="staff_submit">SUBMIT</string>
</resources>
